--- a/index.html
+++ b/index.html
@@ -72,20 +72,20 @@
 
         <!-- "what we do" section -->
         <section id="what-we-do" class="intro">
-            <h2>What We Do</h2>
+            <h2 class="section-title primary-border">What We Do</h2>
             <p>
                 butcher selfies chambray shabby chic gentrify ready made yr Echo Park XOXO Tumble normcore Banksy direct trade Blue Bottle chillwave you probably have
             </p>
         </section>
 
         <!-- "what you do" section -->
-        <section id="what-you-do">
-            <h2>What You Do</h2>
+        <section id="what-you-do" class="steps">
+            <h2 class="section-title secondary-border">What You Do</h2>
 
             <div>
                 <!-- insert this img element -->
                 <img src="./assets/images/step-1.svg" alt="" />
-                <h3>Step 1: Fill Out the Form </h3>
+                <h3>Step 1: <span>Fill Out the Form</span></h3>
                 <p>You're already here, so why not?</p>
             </div>
             
