--- a/index.html
+++ b/index.html
@@ -109,8 +109,44 @@
         </section>
 
         <!-- "meet the trainers" section -->
-        <section>
-            <h2> Meet The Trainers</h2>
+        <section id="your-trainers" class="trainers">
+            <h2 class="section-title primary-border"> Meet The Trainers</h2>
+            
+        <!-- first trainer bio -->  
+            <article class="trainer">
+                <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+                <div class="trainer-bio text-left">
+                    <h3>Arron Stephens</h3>
+                    <h4>Speed / Strenth</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus iure consequatur quibusdam doloremque, illum fuga ad atque, est itaque beatae deserunt reiciendis similique, saepe praesentium. Provident laborum quaerat dolorum nisi.
+                    </p>
+                </div>
+            </article>
+
+        <!-- second trainer bio -->
+            <article class="trainer">
+                <div class="trainer-bio text-right">
+                    <h3>Joanna Gill</h3>
+                    <h4>Endurance</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum ipsam reiciendis corrupti excepturi voluptates magni, omnis inventore? Repudiandae, cum reiciendis? Dolorem sint dolor, optio saepe repudiandae ipsum nemo ipsam facilis!
+                    </p>
+                </div>
+                <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout"/>
+            </article>
+
+        <!-- third trainer bio -->
+            <article class="trainer">
+                <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+                <div class="trainer-bio text-left">
+                    <h3>Harry "the Headband" Smith</h3>
+                    <h4>Strength</h4>
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat, eveniet tempore officiis assumenda harum exercitationem ratione magni rerum obcaecati? Aperiam veritatis cupiditate provident nobis voluptates quaerat iure placeat perferendis quis.
+                    </p>
+                </div>
+            </article>
         </section>
 
         <!-- "reach out" section -->
