reach out section

--- a/index.html
+++ b/index.html
@@ -150,18 +150,15 @@
         </section>
 
         <!-- "reach out" section -->
-        <section>
-            <h2>Reach Out</h2>
+        <section id="reach-out" class="contact">
+            <h2 class="section-title secondary-border">Reach Out</h2>
             <div class="contact-info">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2867.86567168609!2d-123.0747941841701!3d44.04483017910983!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54c11e3a5b162eaf%3A0x22aa784426b6a136!2sUniversity%20of%20Oregon!5e0!3m2!1sen!2sus!4v1651815251673!5m2!1sen!2sus" 
-                width="400" 
-                height="400" 
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2867.86567168609!2d-123.0747941841701!3d44.04483017910983!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54c11e3a5b162eaf%3A0x22aa784426b6a136!2sUniversity%20of%20Oregon!5e0!3m2!1sen!2sus!4v1651815251673!5m2!1sen!2sus"
                 style="border:0;" 
                 allowfullscreen="" 
                 loading="lazy" 
                 referrerpolicy="no-referrer-when-downgrade">
                 </iframe>
-            </div>
             <div>
                 <h3>Run Buddy</h3>
                 <p>
