--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
 
         <!-- hero/jumbotron -->
         <section class="hero">
+            <div class ="hero-cta">
+                <h2>Start Building Habits.</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, totam ab. Rem, veniam, dolor culpa explicabo possimus itaque laudantium natus eligendi quisquam velit nemo? Neque, impedit tenetur. Molestiae, autem deleniti!</p>
+            </div>
             <div class ="hero-form">
                 <h3>Get Started Today</h3>
                 <p>Fill out this form and one of our trainers will schedule a consult</p>
