center section titles in flexbox

--- a/index.html
+++ b/index.html
@@ -76,15 +76,25 @@
 
         <!-- "what we do" section -->
         <section id="what-we-do" class="intro">
-            <h2 class="section-title primary-border">What We Do</h2>
-            <p>
-                butcher selfies chambray shabby chic gentrify ready made yr Echo Park XOXO Tumble normcore Banksy direct trade Blue Bottle chillwave you probably have
-            </p>
+            <div class="flex-row">
+                <h2 class="section-title primary-border">
+                    What We Do
+                </h2>
+            </div>
+            <div class="flex-row">
+                <p>
+                    butcher selfies chambray shabby chic gentrify ready made yr Echo Park XOXO Tumble normcore Banksy direct trade Blue Bottle chillwave you probably have
+                </p>
+            </div>
         </section>
 
         <!-- "what you do" section -->
         <section id="what-you-do" class="steps">
-            <h2 class="section-title secondary-border">What You Do</h2>
+            <div class="flex-row">
+                <h2 class="section-title secondary-border">
+                    What You Do
+                </h2>
+            </div>
 
             <div>
                 <!-- insert this img element -->
@@ -114,7 +124,11 @@
 
         <!-- "meet the trainers" section -->
         <section id="your-trainers" class="trainers">
-            <h2 class="section-title primary-border"> Meet The Trainers</h2>
+            <div class="flex-row">
+                <h2 class="section-title primary-border"> 
+                    Meet The Trainers
+                </h2>
+            </div>
             
         <!-- first trainer bio -->  
             <article class="trainer">
