--- a/index.html
+++ b/index.html
@@ -194,14 +194,30 @@
 
         <!-- "reach out" section -->
         <section id="reach-out" class="contact">
-            <h2 class="section-title secondary-border">Reach Out</h2>
+            <div class="flex-row">
+                <h2 class="section-title secondary-border">
+                    Reach Out
+                </h2>
+            </div>
+
             <div class="contact-info">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2867.86567168609!2d-123.0747941841701!3d44.04483017910983!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54c11e3a5b162eaf%3A0x22aa784426b6a136!2sUniversity%20of%20Oregon!5e0!3m2!1sen!2sus!4v1651815251673!5m2!1sen!2sus"
-                style="border:0;" 
-                allowfullscreen="" 
-                loading="lazy" 
-                referrerpolicy="no-referrer-when-downgrade">
-                </iframe>
+                <div>
+                    <h3>Run Buddy</h3>
+                    <p>
+                        Any questions or concerns before signing up?
+                    <br />
+                        Let us know and we'll be happy to talk to you!
+                    </p>
+
+                    <address>
+                        55 Main Street<br />
+                        Some Town, CA<br />
+                        12345<br />
+                        P: 555.RUN.BUDZ (555.786.2839)<br />
+                        E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+                    </address>
+                </div>
+
             <div class="contact-form">
                 <h3>Contact Us</h3>
                 <form>
@@ -213,21 +229,10 @@
 
                     <button type="submit">Submit</button>
                 </form>
-            </div>
-            <div>
-                <h3>Run Buddy</h3>
-                <p>
-                    Any questions or concerns before signing up?
-                    <br />
-                    Let us know and we'll be happy to talk to you!
-                </p>
-                <address>
-                    55 Main Street<br />
-                    Some Town, CA<br />
-                    12345<br />
-                    P: 555.RUN.BUDZ (555.786.2839)<br />
-                    E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
-                </address>
+                </div>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2867.86567168609!2d-123.0747941841701!3d44.04483017910983!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54c11e3a5b162eaf%3A0x22aa784426b6a136!2sUniversity%20of%20Oregon!5e0!3m2!1sen!2sus!4v1651815251673!5m2!1sen!2sus"
+                    style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+                </iframe>
             </div>
         </section>
 
